kubernetes/k8s-learning/06-projects/01-microservice-deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservice
  labels:
    project: microservice-demo
